--- a/style.css
+++ b/style.css
@@ -1,5 +1,84 @@
 body {
   background: hsl(190, 15%, 20%);
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+}
+
+a {
+  color: hsl(56, 100%, 75%);
+}
+
+a:visited {
+  color: hsl(56, 50%, 50%);
+}
+
+.menu-wrapper {
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 100;
+}
+
+.menu-trigger {
+  cursor: pointer;
+  display: inline-block;
+  color: black;
+  background-color: white;
+  padding: 10px;
+}
+
+.menu-trigger:hover {
+  background-color: hsl(56, 75%, 50%);
+}
+
+.menu {
+  display: none;
+  position: relative;
+  width: 250px;
+  max-height: 500px;
+  overflow: auto;
+  background-color: white;
+  color: black;
+}
+
+.menu-wrapper:hover .menu {
+  display: block;
+}
+
+.menu-group {
+  box-sizing: border-box;
+  width: 100%;
+  padding: 10px;
+  font-weight: bold;
+}
+
+.menu a {
+  display: block;
+  box-sizing: border-box;
+  width: 100%;
+  color: black;
+  padding: 10px 10px 10px 20px;
+  text-decoration: none;
+}
+
+.menu a:hover {
+  background-color: hsl(56, 75%, 50%);
+  text-decoration: underline;
+}
+
+.canvas-frame-wrapper {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.canvas-frame {
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 #canvas {
